--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,3 +1,42 @@
-<h1>HeroesApp</h1>
+<mat-sidenav-container fullscreen >
+    <mat-sidenav #sidenav mode="push">
+        <mat-toolbar color="primary" >
+            <span>Menú</span>
+            <span class="spacer"></span>
+            <button mat-raised-button  color="primary" (click)="sidenav.toggle()">
+                <mat-icon>menu</mat-icon></button>
+        </mat-toolbar>
 
-<router-outlet></router-outlet>
+        <mat-nav-list>
+            <a routerLink="./listado" mat-list-item (click)="sidenav.toggle()">
+                <mat-icon mat-list-icon >label</mat-icon>
+                <span>Listado de heroes</span>
+            </a>
+            <a routerLink="./agregar" mat-list-item (click)="sidenav.toggle()">
+                <mat-icon mat-list-icon >add</mat-icon>
+                <span>Añadir Héroe</span>
+            </a>
+            <a routerLink="./buscar" mat-list-item (click)="sidenav.toggle()">
+                <mat-icon mat-list-icon >search</mat-icon>
+                <span>Añadir Héroe</span>
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-toolbar>
+        <button mat-raised-button color="primary" (click)="sidenav.toggle()">
+            <mat-icon>menu</mat-icon></button>
+
+            <span class="spacer"></span>
+            <button mat-raised-button color="primary" (click)="sidenav.toggle()">
+                Loggout
+            </button>
+    </mat-toolbar>
+
+    <div class="container">
+        <router-outlet></router-outlet>
+
+    </div>
+
+
+</mat-sidenav-container>
