--- a/src/app/heroes/pages/heroe/heroe.component.html
+++ b/src/app/heroes/pages/heroe/heroe.component.html
@@ -1,1 +1,33 @@
-<p>heroe works!</p>
+<mat-grid-list cols="1" *ngIf="!heroe; else divHeroe">
+    <mat-grid-tile>
+        <mat-spinner></mat-spinner>
+    </mat-grid-tile>
+</mat-grid-list>
+
+<ng-template #divHeroe>
+    <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="80">
+
+        <div fxFlex="50">
+            <h1>{{heroe.superhero}} <h2>{{heroe.alter_ego}}</h2></h1>
+            
+            <img [src]="heroe | imagen">
+        </div>
+        
+        <div fxFlex="50">
+            <h2>Universo: {{heroe.publisher}}</h2>
+
+            <mat-list>
+                <mat-list-item>{{heroe.first_appearance}}</mat-list-item>
+                <mat-list-item>{{heroe.characters}}</mat-list-item>           
+                <mat-list-item>{{heroe.publisher}}</mat-list-item>
+                <mat-list-item>{{heroe.alter_ego}}</mat-list-item>
+            </mat-list>
+            <br>
+            <button mat-raised-button (click)="regresar()" color="primary">Regresar</button>
+        </div>
+
+
+
+
+    </div>
+</ng-template>
