--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,62 @@
-<p>agregar works!</p>
+<h1>Nuevo Héroe</h1>
+
+<div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
+    <div fxFlex="50" fxLayout="column">
+
+        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+            <mat-form-field fxLayout.xs="column">
+                <mat-label>Super Héroe</mat-label>
+                <input type="text" matInput [(ngModel)]="heroe.superhero" required>
+    
+            </mat-form-field>
+    
+            <mat-form-field >
+                <mat-label>Alter Ego</mat-label>
+                <input type="text" matInput [(ngModel)]="heroe.alter_ego" required>
+    
+            </mat-form-field>
+
+
+        </div>
+
+
+        <mat-form-field>
+            <mat-label>Primera aparición</mat-label>
+            <input type="text" matInput [(ngModel)]="heroe.first_appearance" required>
+
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Personajes</mat-label>
+            <input type="text" matInput [(ngModel)]="heroe.characters" required>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Universo</mat-label>
+            <mat-select [(ngModel)]="heroe.publisher" required>
+                <mat-option *ngFor="let universo of universos" [value]="universo.id">
+                    {{universo.universo}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Foto URL</mat-label>
+            <input type="url" matInput  [(ngModel)]="heroe.alt_img" required>
+        </mat-form-field>
+        <br>
+        
+        <div fxLayout="row" fxLayoutAlign="space-between">
+        <button (click)="guardar()" mat-raised-button color="primary"> <mat-icon>edit</mat-icon> Guardar </button>
+            <button *ngIf="heroe.id" (click)="borrar()"  mat-raised-button color="warn">
+                <mat-icon>remove</mat-icon>
+                Borrar
+            </button>
+        </div>
+
+    </div>
+    <div fxFlex="50">
+        <img [src]="heroe | imagen">
+    </div>
+
+</div>
