empezando a proteger rutas

--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -28,7 +28,7 @@
             <mat-icon>menu</mat-icon></button>
 
             <span class="spacer"></span>
-            <button mat-raised-button color="primary" (click)="sidenav.toggle()">
+            <button mat-raised-button color="primary" (click)="logOut()">
                 Loggout
             </button>
     </mat-toolbar>
