--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,4 +1,4 @@
-<h1>Nuevo Héroe</h1>
+<h1>{{(heroe.id) ? "Editar" : "Agregar"}} Héroe <small>{{ heroe.superhero }}</small></h1>
 
 <div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
     <div fxFlex="50" fxLayout="column">
@@ -47,7 +47,7 @@
         <br>
         
         <div fxLayout="row" fxLayoutAlign="space-between">
-        <button (click)="guardar()" mat-raised-button color="primary"> <mat-icon>edit</mat-icon> Guardar </button>
+        <button (click)="guardar()" mat-raised-button color="primary"> <mat-icon>edit</mat-icon> {{(heroe.id) ? "Actualizar" : "Crear"}} </button>
             <button *ngIf="heroe.id" (click)="borrar()"  mat-raised-button color="warn">
                 <mat-icon>remove</mat-icon>
                 Borrar
