empezando a proteger rutas

--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -28,6 +28,7 @@
             <mat-icon>menu</mat-icon></button>
 
             <span class="spacer"></span>
+            <span>Franco</span>
             <button mat-raised-button color="primary" (click)="logOut()">
                 Loggout
             </button>
